--- a/moloko/css/superfish.css
+++ b/moloko/css/superfish.css
@@ -1,37 +1,40 @@
-nav{ position:relative; margin: 0px 0 0 0;}
-.sf-menu ul {position:absolute;top:-999px; display:none;/* left offset of submenus need to match (see below) */}
-.sf-menu ul li {width:100%}
-.sf-menu li {float:left;position:relative}
+.pimary_nav{ 
+	position:relative;
+	background: url(../images/nav_bg.png) repeat-x;
+}
+.menu ul {position:absolute;top:-999px; display:none;/* left offset of submenus need to match (see below) */}
+.menu ul li {width:100%}
+.menu li {float:left;position:relative}
 
 .menu_link{
   display:block;
   position:relative;
-  font-size: px;
-  line-height: px;
-  color:#;
+  font-size: 18px;
+  line-height: 29px;
+  padding:8px 0 8px 0;
+  color:#fff;
+  text-shadow: 1px 1px 1px rgba(0,0,0,0.75);
+  text-transform: uppercase;
 }
 .menu_link:hover,
-.current .menu_link,
-li.sfHover .menu_link{
+.menu_item.current>.menu_link,
+.menu>li.sfHover>.menu_link{
   
 }
 
 .menu_item{
+  width: 20%;
+  text-align: center;
+}
+.menu_link{
   
 }
 
 /*================================>> 2 Level <<========================================*/
-.sub_menu,
-.li.sfHover>.sub_menu{
-	left:0;top:50px;
-	width: px;
-	padding:0 0 0 0;
-	z-index:99;
-}
-.sub_menu_item{}
-.sub_menu_link{}
-.sub_menu_link:hover,
-li.sfHover li.sfHover .sub_menu_link{}
+.sf-menu>li>ul,.sf-menu>li.sfHover>ul{left:0;top:50px;width: px;padding:0 0 0 0; z-index:99}
+.sf-menu>li>ul>li{}
+.sf-menu>li>ul>li>a{}
+.sf-menu li li a:hover, .sf-menu li.sfHover li.sfHover>a{}
 
 /*================================>> 3 Level <<========================================*/
 .sf-menu li li ul{left:0;top:0px;width: px;padding:0 0 0 0;z-index:99}
@@ -73,12 +76,12 @@ li.sfHover li.sfHover .sub_menu_link{}
 			margin-bottom:5px;
 		}
 	.sf-menu{display:none;}
-		nav select{
+	nav select{
 		font:12px/15px Arial, Helvetica, sans-serif;
 		color:#464646;
 		width:100%;
-	    outline: none;
-	    padding: 5px;
+    outline: none;
+    padding: 5px;
 		border:2px solid #9e9e9e;
 	}
 	
